--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.2
	- Added Min Album size as preference, defaults to 0 (Thx Rubin)
	- Fixed a problem with the automatic registration sorting on user
		lists and admin notification of new users (Thx pb1dft)
	- Fixed 'auto_user' config option on automatic registration it
		wasn't actually respecting the config option (Thx pb1dft)
	- Fixed a typo on the XSPF playlist generation (Thx pb1dft)
	- Fixed an issue with 'Download Selected' from playlists passing
		the incorrect songs
	- When adding to a playlist by default it 'appends' rather then
		integrating (Thx Salguod)
	- Now Remembers the Last used playlist correctly. (Thx Salguod)
	- Cleaned up some Formating issues with the Access control 
		interface.
	- Fixed an issue with the MPD Controller not passing the password
		to the MPD class causing flames to shoot out if your MPD
		had a password set.
  	- Fixed issue with transcoding not changing the mime type or the
		filename, currently hardcodes to mp3 and audio/mpeg.
  	- Updated Spanish Translation (Thx Bgordon)
	- Fixed potential for a foreach() error on vainfo if no tags are
		found, and fixed quicktime (mp4) tag reading.
  	- Fixed the CSS for now playing, with multiple entries it turned
		into modern art. 
  	- Fixed issue with Keywords search that cropped up when I removed
		the checkboxes. 

--------------------------------------------------------------------------
  v.3.3.2-Beta3
  	- Fixed file-based parsing so that it can now be given priority
		over the tags in the files using tag_order in the config
		file
  	- Fixed Nowplaying, now div based layout and AJAX refreshed
		based on config files refresh_limit
  	- Moved /modules/init.php to /lib/init.php